--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
-/*  your css code here. If applicable */
+body{
+	font-style:Arial,sans-serif;
+	background-color:#f5f5f5
+}
+.testimonial{
+	width:80%;
+	 margin:50px auto;
+}
+.testimonials h2{
+	font-size:2rem;
+	margin-bottom:10px;
+}
+.testimonial {
+  background-color: #fff;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.testimonial p {
+  margin: 1px 0;
+}
+
+.testimonial .author {
+  text-align: right;   
+  font-style: italic;
+}
